# Python-docker-demo

./: .env  README.md  pyproject.toml
api/: main.py  migrate_db.py
api/cruds/: weather_info.py
api/models/: weather_info.py
api/routers/: weather_info.py
api/schemas/: weather_info.py
